<resources>
    <string name="app_name">RecipeAppOlson</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="grocery_list">Grocery List</string>
    <string name="recipes">Recipes</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="category">Category</string>
    <string name="instructions">Instructions</string>
    <string name="ingredients">Ingredients</string>
    <string name="favorite">Favorite</string>
    <string name="favorited">Favorited</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="confirmlogout">Are you sure you want to logout</string>
    <string name="cancel">Cancel</string>
    <string name="changedpassword">Changed Password</string>
    <string name="dontmatch">Passwords Don\'t Match</string>
    <string name="changepassword">Change Password</string>
    <string name="grocerylist">Grocery List</string>
    <string name="ingredient">Ingredient</string>
    <string name="additem">Add Item</string>
    <string name="enteringredient">Please enter an ingredient to add</string>
    <string name="add">Add</string>
    <string name="email">Email</string>
    <string name="synclists">Sync List</string>
    <string name="enteremail">Enter the email of the user you wish to sync to</string>
    <string name="sync">Sync</string>
    <string name="synced">Synced</string>
    <string name="desynclist">Desync List</string>
    <string name="confirmdesync">Do you want to desync</string>
    <string name="desync">Desync</string>
    <string name="desynced">Desynced</string>
    <string name="deleteselected">Delete Selected?</string>
    <string name="delete">Delete</string>
    <string name="unfavorited">Unfavorited</string>
    <string name="addingredient">Add Ingredient to Grocery List?</string>
    <string name="added">Added</string>
    <string name="username">Username</string>
    <string name="no_username">no username</string>
    <string name="no_email">no email</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save_password">Save Password</string>
    <string name="beef">Beef</string>
    <string name="chicken">Chicken</string>
    <string name="dessert">Dessert</string>
    <string name="lamb">Lamb</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pasta">Pasta</string>
    <string name="seafood">Seafood</string>
    <string name="side">Side</string>
    <string name="starter">Starter</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">vegetarian</string>
    <string name="breakfast">Breakfast</string>
    <string name="goat">Goat</string>
    <string name="temp">temp</string>
    <string name="testing123">Testing123</string>
</resources>