<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".FilterDialog">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/filterToolbar"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/category"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:id="@+id/categoryGroup"
            app:singleLine="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/beef"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/beef" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chicken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/chicken" />

            <com.google.android.material.chip.Chip
                android:id="@+id/Dessert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/dessert" />

            <com.google.android.material.chip.Chip
                android:id="@+id/lamb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/lamb" />

            <com.google.android.material.chip.Chip
                android:id="@+id/miscellaneous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/miscellaneous" />

            <com.google.android.material.chip.Chip
                android:id="@+id/pasta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/pasta" />

            <com.google.android.material.chip.Chip
                android:id="@+id/seafood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/seafood" />

            <com.google.android.material.chip.Chip
                android:id="@+id/side"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/side" />

            <com.google.android.material.chip.Chip
                android:id="@+id/starter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/starter" />

            <com.google.android.material.chip.Chip
                android:id="@+id/vegan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/vegan" />

            <com.google.android.material.chip.Chip
                android:id="@+id/vegetarian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/vegetarian" />

            <com.google.android.material.chip.Chip
                android:id="@+id/breakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/breakfast" />

            <com.google.android.material.chip.Chip
                android:id="@+id/goat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/goat" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>
</LinearLayout>